--- a/roulettecounter/templates/roulettecounter/home.html
+++ b/roulettecounter/templates/roulettecounter/home.html
@@ -8,30 +8,155 @@
 
 <body>
   <div class="container-sm">
-  Session<br>
-  <form method="POST" action="">
-    {% csrf_token %}
-    <button type="submit" class="btn btn-primary" name="start_session" value="1">Start</button>
-    <button type="submit" class="btn btn-primary" name="finish_session" value="1">Finish</button>
-  </form>
-  {% if currentSession %}
-  Session started at {{ currentSession.dateStart }}
-  {% else %}
-  awoiefjwifoj
-  {% endif %}
+    Session<br>
+    <form method="POST" action="">
+      {% csrf_token %}
+      <button type="submit" class="btn btn-primary" name="start_session" value="1">Start</button>
+      <button type="submit" class="btn btn-primary" name="finish_session" value="1">Finish</button>
+    </form>
 
-  <br>
-  <div class="row">
-    <div class="col-sm">
-      <button type="button" class="btn btn-square btn-primary">Primary</button>
-      One of three columns
-    </div>
-    <div class="col-sm">
-      One of three columns
-    </div>
-    <div class="col-sm">
-      One of three columns
-    </div>
+    {{ sessionMessage }}
+
+    <br>
+    <br>
+
+    {% for number in numbers %}
+    {% if number.count != 0 %}
+      {{ number.number }} | {{ number.count }}
+    <br>
+    {% endif %}
+    {% endfor %}
+
+    <br>
+    <br>
+
+    <form method="POST" action="">
+      {% csrf_token %}
+      <div class="row">
+        <div class="col">
+          <button type="submit" class="btn btn-primary" name="number" value="0">0</button>
+        </div>
+        <div class="col">
+          <button type="submit" class="btn btn-primary" name="number" value="1">1</button>
+        </div>
+        <div class="col">
+          <button type="submit" class="btn btn-primary" name="number" value="2">2</button>
+        </div>
+        <div class="col">
+          <button type="submit" class="btn btn-primary" name="number" value="3">3</button>
+        </div>
+        <div class="col">
+          <button type="submit" class="btn btn-primary" name="number" value="4">4</button>
+        </div>
+        <div class="col">
+          <button type="submit" class="btn btn-primary" name="number" value="5">5</button>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col">
+          <button type="submit" class="btn btn-primary" name="number" value="6">6</button>
+        </div>
+        <div class="col">
+          <button type="submit" class="btn btn-primary" name="number" value="7">7</button>
+        </div>
+        <div class="col">
+          <button type="submit" class="btn btn-primary" name="number" value="8">8</button>
+        </div>
+        <div class="col">
+          <button type="submit" class="btn btn-primary" name="number" value="9">9</button>
+        </div>
+        <div class="col">
+          <button type="submit" class="btn btn-primary" name="number" value="10">10</button>
+        </div>
+        <div class="col">
+          <button type="submit" class="btn btn-primary" name="number" value="11">11</button>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col">
+          <button type="submit" class="btn btn-primary" name="number" value="12">12</button>
+        </div>
+        <div class="col">
+          <button type="submit" class="btn btn-primary" name="number" value="13">13</button>
+        </div>
+        <div class="col">
+          <button type="submit" class="btn btn-primary" name="number" value="14">14</button>
+        </div>
+        <div class="col">
+          <button type="submit" class="btn btn-primary" name="number" value="15">15</button>
+        </div>
+        <div class="col">
+          <button type="submit" class="btn btn-primary" name="number" value="16">16</button>
+        </div>
+        <div class="col">
+          <button type="submit" class="btn btn-primary" name="number" value="17">17</button>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col">
+          <button type="submit" class="btn btn-primary" name="number" value="18">18</button>
+        </div>
+        <div class="col">
+          <button type="submit" class="btn btn-primary" name="number" value="19">19</button>
+        </div>
+        <div class="col">
+          <button type="submit" class="btn btn-primary" name="number" value="20">20</button>
+        </div>
+        <div class="col">
+          <button type="submit" class="btn btn-primary" name="number" value="21">21</button>
+        </div>
+        <div class="col">
+          <button type="submit" class="btn btn-primary" name="number" value="22">22</button>
+        </div>
+        <div class="col">
+          <button type="submit" class="btn btn-primary" name="number" value="23">23</button>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col">
+          <button type="submit" class="btn btn-primary" name="number" value="24">24</button>
+        </div>
+        <div class="col">
+          <button type="submit" class="btn btn-primary" name="number" value="25">25</button>
+        </div>
+        <div class="col">
+          <button type="submit" class="btn btn-primary" name="number" value="26">26</button>
+        </div>
+        <div class="col">
+          <button type="submit" class="btn btn-primary" name="number" value="27">27</button>
+        </div>
+        <div class="col">
+          <button type="submit" class="btn btn-primary" name="number" value="28">28</button>
+        </div>
+        <div class="col">
+          <button type="submit" class="btn btn-primary" name="number" value="29">29</button>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col">
+          <button type="submit" class="btn btn-primary" name="number" value="30">30</button>
+        </div>
+        <div class="col">
+          <button type="submit" class="btn btn-primary" name="number" value="31">31</button>
+        </div>
+        <div class="col">
+          <button type="submit" class="btn btn-primary" name="number" value="32">32</button>
+        </div>
+        <div class="col">
+          <button type="submit" class="btn btn-primary" name="number" value="33">33</button>
+        </div>
+        <div class="col">
+          <button type="submit" class="btn btn-primary" name="number" value="34">34</button>
+        </div>
+        <div class="col">
+          <button type="submit" class="btn btn-primary" name="number" value="35">35</button>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col">
+          <button type="submit" class="btn btn-primary" name="number" value="36">36</button>
+        </div>
+      </div>
+    </form>
   </div>
-</div>
 </body>
