--- a/roulettecounter/templates/roulettecounter/home.html
+++ b/roulettecounter/templates/roulettecounter/home.html
@@ -15,7 +15,12 @@
       <button type="submit" class="btn btn-primary" name="finish_session" value="1">Finish</button>
     </form>
 
-    {{ sessionMessage }}
+    <!-- Show info -->
+    <div class="alert alert-dark" role="alert">
+    {% if infoMessage %}
+      {{ infoMessage }}
+    {% endif %}
+    </div>
 
     <br>
     <br>
@@ -37,130 +42,58 @@
     <form method="POST" action="">
       {% csrf_token %}
       <div class="row">
-        <div class="col">
-          <button type="submit" class="btn btn-primary" name="number" value="0">0</button>
+        <div class="btn-group btn-group-lg col" role="group" aria-label="Basic example">
+          <button type="submit" class="btn btn-light" name="number" value="0">0</button>
+          <button type="submit" class="btn btn-light" name="number" value="1">1</button>
+          <button type="submit" class="btn btn-light" name="number" value="2">2</button>
+          <button type="submit" class="btn btn-light" name="number" value="3">3</button>
+          <button type="submit" class="btn btn-light" name="number" value="4">4</button>
+          <button type="submit" class="btn btn-light" name="number" value="5">5</button>
+          <button type="submit" class="btn btn-light" name="number" value="6">6</button>
+          <button type="submit" class="btn btn-light" name="number" value="7">7</button>
+          <button type="submit" class="btn btn-light" name="number" value="8">8</button>
+          <button type="submit" class="btn btn-light" name="number" value="9">9</button>
+          <button type="submit" class="btn btn-light" name="number" value="10">10</button>
+          <button type="submit" class="btn btn-light" name="number" value="11">11</button>
         </div>
-        <div class="col">
-          <button type="submit" class="btn btn-primary" name="number" value="1">1</button>
         </div>
-        <div class="col">
-          <button type="submit" class="btn btn-primary" name="number" value="2">2</button>
+        <div class="row">
+        <div class="btn-group btn-group-lg col" role="group" aria-label="Basic example">
+          <button type="submit" class="btn btn-light" name="number" value="13">13</button>
+          <button type="submit" class="btn btn-light" name="number" value="14">14</button>
+          <button type="submit" class="btn btn-light" name="number" value="15">15</button>
+          <button type="submit" class="btn btn-light" name="number" value="16">16</button>
+          <button type="submit" class="btn btn-light" name="number" value="17">17</button>
+          <button type="submit" class="btn btn-light" name="number" value="18">18</button>
+          <button type="submit" class="btn btn-light" name="number" value="19">19</button>
+          <button type="submit" class="btn btn-light" name="number" value="20">20</button>
+          <button type="submit" class="btn btn-light" name="number" value="21">21</button>
+          <button type="submit" class="btn btn-light" name="number" value="22">22</button>
+          <button type="submit" class="btn btn-light" name="number" value="23">23</button>
+          <button type="submit" class="btn btn-light" name="number" value="24">24</button>
+          <button type="submit" class="btn btn-light" name="number" value="25">25</button>
         </div>
-        <div class="col">
-          <button type="submit" class="btn btn-primary" name="number" value="3">3</button>
         </div>
-        <div class="col">
-          <button type="submit" class="btn btn-primary" name="number" value="4">4</button>
+        <div class="row">
+        <div class="btn-group btn-group-lg col" role="group" aria-label="Basic example">
+          <button type="submit" class="btn btn-light" name="number" value="26">26</button>
+          <button type="submit" class="btn btn-light" name="number" value="27">27</button>
+          <button type="submit" class="btn btn-light" name="number" value="28">28</button>
+          <button type="submit" class="btn btn-light" name="number" value="29">29</button>
+          <button type="submit" class="btn btn-light" name="number" value="30">30</button>
+          <button type="submit" class="btn btn-light" name="number" value="31">31</button>
+          <button type="submit" class="btn btn-light" name="number" value="32">32</button>
+          <button type="submit" class="btn btn-light" name="number" value="33">33</button>
+          <button type="submit" class="btn btn-light" name="number" value="34">34</button>
+          <button type="submit" class="btn btn-light" name="number" value="35">35</button>
+          <button type="submit" class="btn btn-light" name="number" value="36">36</button>
         </div>
-        <div class="col">
-          <button type="submit" class="btn btn-primary" name="number" value="5">5</button>
         </div>
-      </div>
-      <div class="row">
-        <div class="col">
-          <button type="submit" class="btn btn-primary" name="number" value="6">6</button>
-        </div>
-        <div class="col">
-          <button type="submit" class="btn btn-primary" name="number" value="7">7</button>
-        </div>
-        <div class="col">
-          <button type="submit" class="btn btn-primary" name="number" value="8">8</button>
-        </div>
-        <div class="col">
-          <button type="submit" class="btn btn-primary" name="number" value="9">9</button>
-        </div>
-        <div class="col">
-          <button type="submit" class="btn btn-primary" name="number" value="10">10</button>
-        </div>
-        <div class="col">
-          <button type="submit" class="btn btn-primary" name="number" value="11">11</button>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col">
-          <button type="submit" class="btn btn-primary" name="number" value="12">12</button>
-        </div>
-        <div class="col">
-          <button type="submit" class="btn btn-primary" name="number" value="13">13</button>
-        </div>
-        <div class="col">
-          <button type="submit" class="btn btn-primary" name="number" value="14">14</button>
-        </div>
-        <div class="col">
-          <button type="submit" class="btn btn-primary" name="number" value="15">15</button>
-        </div>
-        <div class="col">
-          <button type="submit" class="btn btn-primary" name="number" value="16">16</button>
-        </div>
-        <div class="col">
-          <button type="submit" class="btn btn-primary" name="number" value="17">17</button>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col">
-          <button type="submit" class="btn btn-primary" name="number" value="18">18</button>
-        </div>
-        <div class="col">
-          <button type="submit" class="btn btn-primary" name="number" value="19">19</button>
-        </div>
-        <div class="col">
-          <button type="submit" class="btn btn-primary" name="number" value="20">20</button>
-        </div>
-        <div class="col">
-          <button type="submit" class="btn btn-primary" name="number" value="21">21</button>
-        </div>
-        <div class="col">
-          <button type="submit" class="btn btn-primary" name="number" value="22">22</button>
-        </div>
-        <div class="col">
-          <button type="submit" class="btn btn-primary" name="number" value="23">23</button>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col">
-          <button type="submit" class="btn btn-primary" name="number" value="24">24</button>
-        </div>
-        <div class="col">
-          <button type="submit" class="btn btn-primary" name="number" value="25">25</button>
-        </div>
-        <div class="col">
-          <button type="submit" class="btn btn-primary" name="number" value="26">26</button>
-        </div>
-        <div class="col">
-          <button type="submit" class="btn btn-primary" name="number" value="27">27</button>
-        </div>
-        <div class="col">
-          <button type="submit" class="btn btn-primary" name="number" value="28">28</button>
-        </div>
-        <div class="col">
-          <button type="submit" class="btn btn-primary" name="number" value="29">29</button>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col">
-          <button type="submit" class="btn btn-primary" name="number" value="30">30</button>
-        </div>
-        <div class="col">
-          <button type="submit" class="btn btn-primary" name="number" value="31">31</button>
-        </div>
-        <div class="col">
-          <button type="submit" class="btn btn-primary" name="number" value="32">32</button>
-        </div>
-        <div class="col">
-          <button type="submit" class="btn btn-primary" name="number" value="33">33</button>
-        </div>
-        <div class="col">
-          <button type="submit" class="btn btn-primary" name="number" value="34">34</button>
-        </div>
-        <div class="col">
-          <button type="submit" class="btn btn-primary" name="number" value="35">35</button>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col">
-          <button type="submit" class="btn btn-primary" name="number" value="36">36</button>
-        </div>
-      </div>
+    </form>
+
+    <form method="POST" action="">
+      {% csrf_token %}
+      <button type="submit" class="btn btn-danger" name="delete" value="1">Delete</button>
     </form>
 
     <!-- Show popular numbers  -->
