--- a/roulettecounter/templates/roulettecounter/home.html
+++ b/roulettecounter/templates/roulettecounter/home.html
@@ -1,103 +1,97 @@
-<head>
-  <!-- Bootstrap -->
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-  <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
-</head>
+{% extends "roulettecounter/header.html" %}
 
-<body>
-  <div class="container-sm">
-    <br>
-    <div class="alert alert-info" role="alert">
-      <small>Session</small>
-      <form method="POST" action="">
-        {% csrf_token %}
-        <button type="submit" class="btn btn-primary" name="start_session" value="1">Start</button>
-        <button type="submit" class="btn btn-primary" name="finish_session" value="1">Finish</button>
-      </form>
-    </div>
-
-
-    <!-- Show info -->
-    <div class="alert alert-dark" role="alert">
-    {% if infoMessage %}
-      {{ infoMessage }}
-    {% endif %}
-    </div>
-
-    <!-- Show history -->
-    <div class="alert alert-primary" role="alert">
-      <!-- <p class="text-monospace"> -->
-        <small>History</small>
-        <h3>
-          {% for number in history %}
-          {{ number.number }}
-          {% endfor %}
-        </h3>
-    </div>
-
+{% block content %}
+<div class="container-sm">
+  <br>
+  <div class="alert alert-info" role="alert">
+    <small>Session</small>
     <form method="POST" action="">
       {% csrf_token %}
-      <div class="row">
-        <div class="btn-group btn-group-lg col" role="group" aria-label="Basic example">
-          <button type="submit" class="btn btn-light" name="number" value="0">0</button>
-          <button type="submit" class="btn btn-light" name="number" value="1">1</button>
-          <button type="submit" class="btn btn-light" name="number" value="2">2</button>
-          <button type="submit" class="btn btn-light" name="number" value="3">3</button>
-          <button type="submit" class="btn btn-light" name="number" value="4">4</button>
-          <button type="submit" class="btn btn-light" name="number" value="5">5</button>
-          <button type="submit" class="btn btn-light" name="number" value="6">6</button>
-          <button type="submit" class="btn btn-light" name="number" value="7">7</button>
-          <button type="submit" class="btn btn-light" name="number" value="8">8</button>
-          <button type="submit" class="btn btn-light" name="number" value="9">9</button>
-          <button type="submit" class="btn btn-light" name="number" value="10">10</button>
-          <button type="submit" class="btn btn-light" name="number" value="11">11</button>
-        </div>
-        </div>
-        <div class="row">
-        <div class="btn-group btn-group-lg col" role="group" aria-label="Basic example">
-          <button type="submit" class="btn btn-light" name="number" value="13">13</button>
-          <button type="submit" class="btn btn-light" name="number" value="14">14</button>
-          <button type="submit" class="btn btn-light" name="number" value="15">15</button>
-          <button type="submit" class="btn btn-light" name="number" value="16">16</button>
-          <button type="submit" class="btn btn-light" name="number" value="17">17</button>
-          <button type="submit" class="btn btn-light" name="number" value="18">18</button>
-          <button type="submit" class="btn btn-light" name="number" value="19">19</button>
-          <button type="submit" class="btn btn-light" name="number" value="20">20</button>
-          <button type="submit" class="btn btn-light" name="number" value="21">21</button>
-          <button type="submit" class="btn btn-light" name="number" value="22">22</button>
-          <button type="submit" class="btn btn-light" name="number" value="23">23</button>
-          <button type="submit" class="btn btn-light" name="number" value="24">24</button>
-          <button type="submit" class="btn btn-light" name="number" value="25">25</button>
-        </div>
-        </div>
-        <div class="row">
-        <div class="btn-group btn-group-lg col" role="group" aria-label="Basic example">
-          <button type="submit" class="btn btn-light" name="number" value="26">26</button>
-          <button type="submit" class="btn btn-light" name="number" value="27">27</button>
-          <button type="submit" class="btn btn-light" name="number" value="28">28</button>
-          <button type="submit" class="btn btn-light" name="number" value="29">29</button>
-          <button type="submit" class="btn btn-light" name="number" value="30">30</button>
-          <button type="submit" class="btn btn-light" name="number" value="31">31</button>
-          <button type="submit" class="btn btn-light" name="number" value="32">32</button>
-          <button type="submit" class="btn btn-light" name="number" value="33">33</button>
-          <button type="submit" class="btn btn-light" name="number" value="34">34</button>
-          <button type="submit" class="btn btn-light" name="number" value="35">35</button>
-          <button type="submit" class="btn btn-light" name="number" value="36">36</button>
-        </div>
-        </div>
+      <button type="submit" class="btn btn-primary" name="start_session" value="1">Start</button>
+      <button type="submit" class="btn btn-primary" name="finish_session" value="1">Finish</button>
     </form>
-
-    <form method="POST" action="">
-      {% csrf_token %}
-      <button type="submit" class="btn btn-danger" name="delete" value="1">Delete</button>
-    </form>
-
-    <!-- Show popular numbers  -->
-    {% for k, v in numbers.items %}
-      {{ k }} | {{ v }}
-    <br>
-    {% endfor %}
   </div>
-</body>
+
+
+  <!-- Show info -->
+  <div class="alert alert-dark" role="alert">
+  {% if infoMessage %}
+    {{ infoMessage }}
+  {% endif %}
+  </div>
+
+  <!-- Show history -->
+  <div class="alert alert-primary" role="alert">
+    <!-- <p class="text-monospace"> -->
+      <small>History</small>
+      <h3>
+        {% for number in history %}
+        {{ number.number }}
+        {% endfor %}
+      </h3>
+  </div>
+
+  <form method="POST" action="">
+    {% csrf_token %}
+    <div class="row">
+      <div class="btn-group btn-group-lg col" role="group" aria-label="Basic example">
+        <button type="submit" class="btn btn-light" name="number" value="0">0</button>
+        <button type="submit" class="btn btn-light" name="number" value="1">1</button>
+        <button type="submit" class="btn btn-light" name="number" value="2">2</button>
+        <button type="submit" class="btn btn-light" name="number" value="3">3</button>
+        <button type="submit" class="btn btn-light" name="number" value="4">4</button>
+        <button type="submit" class="btn btn-light" name="number" value="5">5</button>
+        <button type="submit" class="btn btn-light" name="number" value="6">6</button>
+        <button type="submit" class="btn btn-light" name="number" value="7">7</button>
+        <button type="submit" class="btn btn-light" name="number" value="8">8</button>
+        <button type="submit" class="btn btn-light" name="number" value="9">9</button>
+        <button type="submit" class="btn btn-light" name="number" value="10">10</button>
+        <button type="submit" class="btn btn-light" name="number" value="11">11</button>
+      </div>
+      </div>
+      <div class="row">
+      <div class="btn-group btn-group-lg col" role="group" aria-label="Basic example">
+        <button type="submit" class="btn btn-light" name="number" value="13">13</button>
+        <button type="submit" class="btn btn-light" name="number" value="14">14</button>
+        <button type="submit" class="btn btn-light" name="number" value="15">15</button>
+        <button type="submit" class="btn btn-light" name="number" value="16">16</button>
+        <button type="submit" class="btn btn-light" name="number" value="17">17</button>
+        <button type="submit" class="btn btn-light" name="number" value="18">18</button>
+        <button type="submit" class="btn btn-light" name="number" value="19">19</button>
+        <button type="submit" class="btn btn-light" name="number" value="20">20</button>
+        <button type="submit" class="btn btn-light" name="number" value="21">21</button>
+        <button type="submit" class="btn btn-light" name="number" value="22">22</button>
+        <button type="submit" class="btn btn-light" name="number" value="23">23</button>
+        <button type="submit" class="btn btn-light" name="number" value="24">24</button>
+        <button type="submit" class="btn btn-light" name="number" value="25">25</button>
+      </div>
+      </div>
+      <div class="row">
+      <div class="btn-group btn-group-lg col" role="group" aria-label="Basic example">
+        <button type="submit" class="btn btn-light" name="number" value="26">26</button>
+        <button type="submit" class="btn btn-light" name="number" value="27">27</button>
+        <button type="submit" class="btn btn-light" name="number" value="28">28</button>
+        <button type="submit" class="btn btn-light" name="number" value="29">29</button>
+        <button type="submit" class="btn btn-light" name="number" value="30">30</button>
+        <button type="submit" class="btn btn-light" name="number" value="31">31</button>
+        <button type="submit" class="btn btn-light" name="number" value="32">32</button>
+        <button type="submit" class="btn btn-light" name="number" value="33">33</button>
+        <button type="submit" class="btn btn-light" name="number" value="34">34</button>
+        <button type="submit" class="btn btn-light" name="number" value="35">35</button>
+        <button type="submit" class="btn btn-light" name="number" value="36">36</button>
+      </div>
+      </div>
+  </form>
+
+  <form method="POST" action="">
+    {% csrf_token %}
+    <button type="submit" class="btn btn-danger" name="delete" value="1">Delete</button>
+  </form>
+
+  <!-- Show popular numbers  -->
+  {% for k, v in numbers.items %}
+    {{ k }} | {{ v }}
+  <br>
+  {% endfor %}
+</div>
+{% endblock %}
