--- a/roulettecounter/templates/roulettecounter/base.html
+++ b/roulettecounter/templates/roulettecounter/base.html
@@ -4,6 +4,8 @@
   <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+
+  {% block head %}{% endblock %}
 </head>
 
 <body>
@@ -19,7 +21,7 @@
           <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Visualize</a>
+          <a class="nav-link" href="/visualize">Visualize</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">Sign up</a>
@@ -34,5 +36,17 @@
     </div>
   </nav>
 
+<div class="container-sm">
+  <!-- Show info -->
+  <div id="infoMessage" class="alert alert-dark" role="alert">
+  {% if infoMessage %}
+    {{ infoMessage }}
+  {% else %}
+    <script>
+      document.getElementById("infoMessage").style.display = "none";
+    </script>
+  {% endif %}
+  </div>
 {% block content %}{% endblock %}
+</div>
 </body>
