Implemented message/toast functionality

--- a/roulettecounter/templates/roulettecounter/base.html
+++ b/roulettecounter/templates/roulettecounter/base.html
@@ -11,8 +11,8 @@
 <body>
   {% include "roulettecounter/includes/navbar.html" %}
   {% include "roulettecounter/includes/messages.html" %}
-  
-  <div class="container-sm">
+
+  <div class="container-sm" style="position: relative">
     <br>
     {% block content %}
     {% endblock %}
