--- a/roulettecounter/templates/roulettecounter/includes/messages.html
+++ b/roulettecounter/templates/roulettecounter/includes/messages.html
@@ -1,19 +1,13 @@
-  <div class="toast" role="alert" aria-live="assertive" aria-atomic="true" id="message">
-    <div class="toast-header">
-      <img src="..." class="rounded mr-2" alt="...">
-      <strong class="mr-auto">Bootstrap</strong>
-      <small>11 mins ago</small>
-      <button type="button" class="ml-2 mb-1 close" data-dismiss="toast" aria-label="Close">
-        <span aria-hidden="true">&times;</span>
-      </button>
-    </div>
-    <div class="toast-body">
-      WHAT THE HELL???
-    </div>
-  </div>
-  <script>$('#message').toast('show')</script>
-{% if messages %}
-  {% for message in messages %}
-  <script>$("{{message}}").toast('show')</script>
-  {% endfor %}
-{% endif %}
+<div class="position-absolute w-100 d-flex flex-column p-4">
+  {% if messages %}
+    {% for message in messages %}
+        <div class="toast ml-auto show" role="alert" data-delay="5000">
+          <div class="toast-body">
+            {{ message }}
+          </div>
+        </div>
+    {% endfor %}
+  {% endif %}
+</div>
+
+<script>$('.toast').toast('show')</script>
