Made it all API calls and fixed some stuff

--- a/roulettecounter/templates/roulettecounter/includes/deletebutton.html
+++ b/roulettecounter/templates/roulettecounter/includes/deletebutton.html
@@ -1,4 +1,4 @@
-<form method="POST" action="">
+<form method="POST" action="/delete_most_recent">
   {% csrf_token %}
-  <button type="submit" class="btn btn-danger" name="delete" value="1">Delete Most Recent Number</button>
+  <button type="submit" class="btn btn-danger">Delete Most Recent Number</button>
 </form>
