--- a/roulettecounter/templates/roulettecounter/includes/input.html
+++ b/roulettecounter/templates/roulettecounter/includes/input.html
@@ -1,58 +1,58 @@
-<form method="POST" action="">
+<form method="POST" action="/number">
   {% csrf_token %}
   <div class="row no-gutters">
     <div class="btn-group btn-group-lg col" role="group" aria-label="Basic example">
-      <button type="submit" class="btn btn-light" name="number" value="0">0</button>
-      <button type="submit" class="btn btn-light" name="number" value="1">1</button>
-      <button type="submit" class="btn btn-light" name="number" value="2">2</button>
-      <button type="submit" class="btn btn-light" name="number" value="3">3</button>
-      <button type="submit" class="btn btn-light" name="number" value="4">4</button>
-      <button type="submit" class="btn btn-light" name="number" value="5">5</button>
+      <button type="submit" class="btn btn-light" formaction="/number/0">0</button>
+      <button type="submit" class="btn btn-light" formaction="/number/1">1</button>
+      <button type="submit" class="btn btn-light" formaction="/number/2"">2</button>
+      <button type="submit" class="btn btn-light" formaction="/number/3"">3</button>
+      <button type="submit" class="btn btn-light" formaction="/number/4">4</button>
+      <button type="submit" class="btn btn-light" formaction="/number/5">5</button>
     </div>
     <div class="btn-group btn-group-lg col" role="group" aria-label="Basic example">
-      <button type="submit" class="btn btn-light" name="number" value="6">6</button>
-      <button type="submit" class="btn btn-light" name="number" value="7">7</button>
-      <button type="submit" class="btn btn-light" name="number" value="8">8</button>
-      <button type="submit" class="btn btn-light" name="number" value="9">9</button>
-      <button type="submit" class="btn btn-light" name="number" value="10">10</button>
-      <button type="submit" class="btn btn-light" name="number" value="11">11</button>
+      <button type="submit" class="btn btn-light" formaction="/number/6">6</button>
+      <button type="submit" class="btn btn-light" formaction="/number/7">7</button>
+      <button type="submit" class="btn btn-light" formaction="/number/8">8</button>
+      <button type="submit" class="btn btn-light" formaction="/number/9">9</button>
+      <button type="submit" class="btn btn-light" formaction="/number/10">10</button>
+      <button type="submit" class="btn btn-light" formaction="/number/11">11</button>
     </div>
   </div>
   <div class="row no-gutters">
     <div class="btn-group btn-group-lg col" role="group" aria-label="Basic example">
-      <button type="submit" class="btn btn-light" name="number" value="12">12</button>
-      <button type="submit" class="btn btn-light" name="number" value="13">13</button>
-      <button type="submit" class="btn btn-light" name="number" value="14">14</button>
-      <button type="submit" class="btn btn-light" name="number" value="15">15</button>
-      <button type="submit" class="btn btn-light" name="number" value="16">16</button>
-      <button type="submit" class="btn btn-light" name="number" value="17">17</button>
+      <button type="submit" class="btn btn-light" formaction="/number/12">12</button>
+      <button type="submit" class="btn btn-light" formaction="/number/13">13</button>
+      <button type="submit" class="btn btn-light" formaction="/number/14">14</button>
+      <button type="submit" class="btn btn-light" formaction="/number/15">15</button>
+      <button type="submit" class="btn btn-light" formaction="/number/16">16</button>
+      <button type="submit" class="btn btn-light" formaction="/number/17">17</button>
     </div>
     <div class="btn-group btn-group-lg col" role="group" aria-label="Basic example">
-      <button type="submit" class="btn btn-light" name="number" value="18">18</button>
-      <button type="submit" class="btn btn-light" name="number" value="19">19</button>
-      <button type="submit" class="btn btn-light" name="number" value="20">20</button>
-      <button type="submit" class="btn btn-light" name="number" value="21">21</button>
-      <button type="submit" class="btn btn-light" name="number" value="22">22</button>
-      <button type="submit" class="btn btn-light" name="number" value="23">23</button>
+      <button type="submit" class="btn btn-light" formaction="/number/18">18</button>
+      <button type="submit" class="btn btn-light" formaction="/number/19">19</button>
+      <button type="submit" class="btn btn-light" formaction="/number/20">20</button>
+      <button type="submit" class="btn btn-light" formaction="/number/21">21</button>
+      <button type="submit" class="btn btn-light" formaction="/number/22">22</button>
+      <button type="submit" class="btn btn-light" formaction="/number/23">23</button>
       </div>
     </div>
     <div class="row no-gutters">
       <div class="btn-group btn-group-lg col" role="group" aria-label="Basic example">
-        <button type="submit" class="btn btn-light" name="number" value="24">24</button>
-        <button type="submit" class="btn btn-light" name="number" value="25">25</button>
-        <button type="submit" class="btn btn-light" name="number" value="26">26</button>
-        <button type="submit" class="btn btn-light" name="number" value="27">27</button>
-        <button type="submit" class="btn btn-light" name="number" value="28">28</button>
-        <button type="submit" class="btn btn-light" name="number" value="29">29</button>
+        <button type="submit" class="btn btn-light" formaction="/number/24">24</button>
+        <button type="submit" class="btn btn-light" formaction="/number/25">25</button>
+        <button type="submit" class="btn btn-light" formaction="/number/26">26</button>
+        <button type="submit" class="btn btn-light" formaction="/number/27">27</button>
+        <button type="submit" class="btn btn-light" formaction="/number/28">28</button>
+        <button type="submit" class="btn btn-light" formaction="/number/29">29</button>
       </div>
       <div class="btn-group btn-group-lg col" role="group" aria-label="Basic example">
-        <button type="submit" class="btn btn-light" name="number" value="30">30</button>
-        <button type="submit" class="btn btn-light" name="number" value="31">31</button>
-        <button type="submit" class="btn btn-light" name="number" value="32">32</button>
-        <button type="submit" class="btn btn-light" name="number" value="33">33</button>
-        <button type="submit" class="btn btn-light" name="number" value="34">34</button>
-        <button type="submit" class="btn btn-light" name="number" value="35">35</button>
-        <button type="submit" class="btn btn-light" name="number" value="36">36</button>
+        <button type="submit" class="btn btn-light" formaction="/number/30">30</button>
+        <button type="submit" class="btn btn-light" formaction="/number/31">31</button>
+        <button type="submit" class="btn btn-light" formaction="/number/32">32</button>
+        <button type="submit" class="btn btn-light" formaction="/number/33">33</button>
+        <button type="submit" class="btn btn-light" formaction="/number/34">34</button>
+        <button type="submit" class="btn btn-light" formaction="/number/35">35</button>
+        <button type="submit" class="btn btn-light" formaction="/number/36">36</button>
       </div>
     </div>
 </form>
