--- a/roulettecounter/templates/roulettecounter/includes/navbar.html
+++ b/roulettecounter/templates/roulettecounter/includes/navbar.html
@@ -10,9 +10,9 @@
         <li class="nav-item">
           <a class="nav-link" href="/">{{user.username}}</a>
         </li>
-        <li class="nav-item">
+        <!-- <li class="nav-item">
           <a class="nav-link" href="/visualize">Visualize</a>
-        </li>
+        </li> -->
         <li class="nav-item">
           <a class="nav-link" href="/logout">Logout</a>
         </li>
@@ -20,14 +20,14 @@
         <li class="nav-item">
           <a class="nav-link" href="/">Guest</a>
         </li>
-        <li class="nav-item">
+        <!-- <li class="nav-item">
           <a class="nav-link" href="/visualize">Visualize</a>
+        </li> -->
+        <li class="nav-item">
+          <a class="nav-link" href="/signup">Sign Up</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/register">Register</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="/login">Login</a>
+          <a class="nav-link" href="/login">Log In</a>
         </li>
       {% endif %}
     </ul>
