--- a/roulettecounter/templates/roulettecounter/includes/hotnumbers.html
+++ b/roulettecounter/templates/roulettecounter/includes/hotnumbers.html
@@ -1,7 +1,7 @@
 <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
-<canvas id="myChart"></canvas>
+<canvas id="{{chartName}}"></canvas>
 <script>
-  var ctx = document.getElementById('myChart').getContext('2d');
+  var ctx = document.getElementById("{{chartName}}").getContext('2d');
   var chart = new Chart(ctx, {
     // The type of chart we want to create
     type: 'horizontalBar',
