--- a/roulettecounter/templates/roulettecounter/includes/navbar.html
+++ b/roulettecounter/templates/roulettecounter/includes/navbar.html
@@ -1,35 +1,39 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="/">Roulette Counter</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
+    <a class="navbar-brand" href="/">Roulette Counter</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
 
-  <div class="collapse navbar-collapse" id="navbarSupportedContent">
-    <ul class="navbar-nav mr-auto">
-      {% if user.is_authenticated %}
-        <li class="nav-item">
-          <a class="nav-link" href="/">{{user.username}}</a>
-        </li>
-        <!-- <li class="nav-item">
-          <a class="nav-link" href="/visualize">Visualize</a>
-        </li> -->
-        <li class="nav-item">
-          <a class="nav-link" href="/logout">Logout</a>
-        </li>
-      {% else %}
-        <li class="nav-item">
-          <a class="nav-link" href="/">Guest</a>
-        </li>
-        <!-- <li class="nav-item">
-          <a class="nav-link" href="/visualize">Visualize</a>
-        </li> -->
-        <li class="nav-item">
-          <a class="nav-link" href="/signup">Sign Up</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="/login">Log In</a>
-        </li>
-      {% endif %}
-    </ul>
-  </div>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav mr-auto">
+            {% if user.is_authenticated %}
+            <li class="nav-item">
+                <a class="nav-link" href="/">{{user.username}}</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="/history">History</a>
+            </li>
+            <!-- <li class="nav-item">
+              <a class="nav-link" href="/visualize">Visualize</a>
+            </li> -->
+            <li class="nav-item">
+                <a class="nav-link" href="/logout">Logout</a>
+            </li>
+            {% else %}
+            <li class="nav-item">
+                <a class="nav-link" href="/">Guest</a>
+            </li>
+            <!-- <li class="nav-item">
+              <a class="nav-link" href="/visualize">Visualize</a>
+            </li> -->
+            <li class="nav-item">
+                <a class="nav-link" href="/signup">Sign Up</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="/login">Log In</a>
+            </li>
+            {% endif %}
+        </ul>
+    </div>
 </nav>
