WIP - More analytics

--- a/roulettecounter/templates/roulettecounter/home.html
+++ b/roulettecounter/templates/roulettecounter/home.html
@@ -8,6 +8,8 @@
   {% if currentSession %}
     {% include "roulettecounter/includes/hotnumbers.html" with chartName="myChart" %}
     <br>
+<!--    {% include "roulettecounter/includes/analytics.html" %}-->
+<!--    <br>-->
     {% include "roulettecounter/includes/input.html" %}
     <br>
     {% include "roulettecounter/includes/history.html" %}
