Improve start new session modal

--- a/roulettecounter/templates/roulettecounter/home.html
+++ b/roulettecounter/templates/roulettecounter/home.html
@@ -104,7 +104,7 @@
 <br>
 <div class="row justify-content-center">
     <div class="col text-center">
-        <button type="submit" class="btn btn-light" formaction="/start_session">New session</button>
+        {% include "roulettecounter\includes\start_new_session_btn.html" %}
     </div>
 </div>
 {% endblock %}
