Got home page working

--- a/roulettecounter/templates/roulettecounter/home.html
+++ b/roulettecounter/templates/roulettecounter/home.html
@@ -1,5 +1,9 @@
 {% extends "roulettecounter/base.html" %}
 
+{% block head %}
+    <script type="text/javascript" src="{{ STATIC_URL }}js/jquery.js"></script>
+{% endblock %}
+
 {% block content %}
 <br>
 <div class="row justify-content-center">
