Add onhover background effects to UI

--- a/roulettecounter/templates/roulettecounter/home.html
+++ b/roulettecounter/templates/roulettecounter/home.html
@@ -2,9 +2,15 @@
 
 {% block head %}
     <script type="text/javascript" src="{{ STATIC_URL }}js/jquery.js"></script>
-{% endblock %}
+ {% endblock %}
 
 {% block content %}
+<style>
+    div.col[id^='div_number']:hover {
+        background-color: #F5F5F5;
+        cursor: pointer;
+     }
+</style>
 <br>
 <div class="row justify-content-center">
     <div class="col text-center">
