Fix mobile page

--- a/roulettecounter/templates/roulettecounter/includes/history.html
+++ b/roulettecounter/templates/roulettecounter/includes/history.html
@@ -4,7 +4,7 @@
     <h3>
       {% if history %}
         {% for number in history %}
-          {{ number.number }}&nbsp;
+          {{ number.number_stat.number }}&nbsp;
         {% endfor %}
       {% else %}
         &nbsp;
