Add delete last number and fix bug with calculating percentages

--- a/roulettecounter/templates/roulettecounter/home.html
+++ b/roulettecounter/templates/roulettecounter/home.html
@@ -127,6 +127,12 @@
 <br>
 <div class="row justify-content-center">
     <div class="col text-center">
+        {% include "roulettecounter\includes\delete_last_number_btn.html" %}
+    </div>
+</div>
+<br>
+<div class="row justify-content-center">
+    <div class="col text-center">
         {% include "roulettecounter\includes\start_new_session_btn.html" %}
     </div>
 </div>
